--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -7,12 +7,19 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">Easy Loans</a>
+      <a href="/" class="navbar-brand" style="
+    font-weight: bold;
+    font-size: 24px;
+    color: blue;
+    ">Easy Loans</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li ng-class="{ active: isActive('/')}"><a href="/">Home</a></li>
-        <li ng-class="{ active: isActive('/contact')}"><a href="/contact">Contact</a></li>
+        <!--<li ng-class="{ active: isActive('/')}"><a href="/">Home</a></li>-->
+        <li ng-class="{ active: isActive('/about')}"><a href="/">About us</a></li>
+        <li ng-class="{ active: isActive('/conditions')}"><a href="/">Conditions</a></li>
+        <li ng-class="{ active: isActive('/how')}"><a href="/">How</a></li>
+        <!--<li ng-class="{ active: isActive('/contact')}"><a href="/contact">Contact</a></li>-->
       </ul>
       <ul ng-if="isAuthenticated()" class="nav navbar-nav navbar-right">
         <li class="dropdown">
