--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,34 +1,32 @@
-<div class="container-fluid">
+<div class="container">
   <div class="row">
-    <div class="col-sm-4">
+    <div class="col-sm-12">
       <div class="panel">
         <div class="panel-body">
-          <h3>Heading</h3>
+          <h3>Money</h3>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
             condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod.
             Donec sed odio dui.</p>
+          <a href="#" role="button" class="btn btn-default">New Application</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="panel">
+        <div class="panel-body">
+          <h3>How do I get a loan?</h3>
+          <p>zov.</p>
           <a href="#" role="button" class="btn btn-default">View details</a>
         </div>
       </div>
     </div>
-    <div class="col-sm-4">
+    <div class="col-md-6">
       <div class="panel">
         <div class="panel-body">
-          <h3>Heading</h3>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-            condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod.
-            Donec sed odio dui.</p>
-          <a href="#" role="button" class="btn btn-default">View details</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="panel">
-        <div class="panel-body">
-          <h3>Heading</h3>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-            condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod.
-            Donec sed odio dui.</p>
+          <h3>How can I pay</h3>
+          <p>ziv1</p>
           <a href="#" role="button" class="btn btn-default">View details</a>
         </div>
       </div>
