--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -7,6 +7,10 @@
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
             condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod.
             Donec sed odio dui.</p>
+          <div>
+            <rzslider rz-slider-model="slider.value"
+                      rz-slider-options="slider.options"></rzslider>
+          </div>
           <a href="#" role="button" class="btn btn-default">New Application</a>
         </div>
       </div>
