--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -4,12 +4,30 @@
       <div class="panel">
         <div class="panel-body">
           <h3>Money</h3>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-            condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod.
-            Donec sed odio dui.</p>
-          <div>
+          <div style="margin-top: 10px">
             <rzslider rz-slider-model="slider.value"
                       rz-slider-options="slider.options"></rzslider>
+          </div>
+          <div style="margin-top: 20px;display: flex;justify-content: space-around;margin-bottom: 40px">
+            <div class="metadata-loan-pair">
+              <div class="metadata-loan-title">Loan amount of</div>
+              <div class="metadata-loan-value">{{slider.value}}€</div>
+            </div>
+
+            <div class="metadata-loan-pair">
+              <div class="metadata-loan-title">Deadline</div>
+              <div class="metadata-loan-value metadata-loan-value-red">30 days</div>
+            </div>
+
+            <div class="metadata-loan-pair">
+              <div class="metadata-loan-title">Commission</div>
+              <div class="metadata-loan-value metadata-loan-value-red">{{(slider.value * 0.058) | number:2}}€</div>
+            </div>
+
+            <div class="metadata-loan-pair">
+              <div class="metadata-loan-title">Cover amount</div>
+              <div class="metadata-loan-value metadata-loan-value-red">{{(slider.value * 1.058) | number:2 }}€</div>
+            </div>
           </div>
           <a href="#" role="button" class="btn btn-default">New Application</a>
         </div>
