--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -251,3 +251,21 @@ textarea {
   letter-spacing: 0.2em;
   text-transform: uppercase;
 }
+
+.metadata-loan-pair{
+  display: inline-flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.metadata-loan-pair .metadata-loan-title{
+  font-size: 12px;
+}
+
+.metadata-loan-pair .metadata-loan-value{
+  font-size: 20px;
+}
+
+.metadata-loan-pair .metadata-loan-value-red{
+  color:red;
+}
