--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -8,7 +8,7 @@
             <rzslider rz-slider-model="slider.value"
                       rz-slider-options="slider.options"></rzslider>
           </div>
-          <div style="margin-top: 20px;display: flex;justify-content: space-around;margin-bottom: 40px">
+          <div class="metadata-container">
             <div class="metadata-loan-pair">
               <div class="metadata-loan-title">Loan amount of</div>
               <div class="metadata-loan-value">{{slider.value}}€</div>
@@ -39,8 +39,8 @@
       <div class="panel">
         <div class="panel-body">
           <h3>How do I get a loan?</h3>
-          <p>zov.</p>
-          <a href="#" role="button" class="btn btn-default">View details</a>
+          <p>How do I get a loan?</p>
+          <a href="/how/borrow" role="button" class="btn btn-default">Borrow</a>
         </div>
       </div>
     </div>
@@ -48,8 +48,8 @@
       <div class="panel">
         <div class="panel-body">
           <h3>How can I pay</h3>
-          <p>ziv1</p>
-          <a href="#" role="button" class="btn btn-default">View details</a>
+          <p>can I pay</p>
+          <a href="/how/pay" role="button" class="btn btn-default">Pay</a>
         </div>
       </div>
     </div>
