--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6138,6 +6138,22 @@ textarea {
   letter-spacing: 0.2em;
   text-transform: uppercase; }
 
+.metadata-container {
+  margin-top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin-bottom: 40px; }
+
+@media screen and (max-width: 600px) {
+  .metadata-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; } }
+
 .metadata-loan-pair {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
