--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -252,6 +252,19 @@ textarea {
   text-transform: uppercase;
 }
 
+.metadata-container{
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 40px;
+}
+
+@media screen and (max-width: 600px) {
+  .metadata-container{
+    flex-direction: column;
+  }
+}
+
 .metadata-loan-pair{
   display: inline-flex;
   flex-direction: column;
