--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -16,9 +16,9 @@
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <!--<li ng-class="{ active: isActive('/')}"><a href="/">Home</a></li>-->
-        <li ng-class="{ active: isActive('/about')}"><a href="/">About us</a></li>
-        <li ng-class="{ active: isActive('/conditions')}"><a href="/">Conditions</a></li>
-        <li ng-class="{ active: isActive('/how')}"><a href="/">How</a></li>
+        <li ng-class="{ active: isActive('/about')}"><a href="/about">About us</a></li>
+        <li ng-class="{ active: isActive('/terms')}"><a href="/terms">Conditions</a></li>
+        <li ng-class="{ active: isActive('/faq')}"><a href="/faq">FAQ</a></li>
         <!--<li ng-class="{ active: isActive('/contact')}"><a href="/contact">Contact</a></li>-->
       </ul>
       <ul ng-if="isAuthenticated()" class="nav navbar-nav navbar-right">
