--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -16,6 +16,7 @@
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <!--<li ng-class="{ active: isActive('/')}"><a href="/">Home</a></li>-->
+        <li ng-if="isAuthenticated()" ng-class="{ active: isActive('/request')}"><a href="/request">New Request</a></li>
         <li ng-class="{ active: isActive('/about')}"><a href="/about">About us</a></li>
         <li ng-class="{ active: isActive('/terms')}"><a href="/terms">Conditions</a></li>
         <li ng-class="{ active: isActive('/faq')}"><a href="/faq">FAQ</a></li>
@@ -28,6 +29,8 @@
           </a>
           <ul class="dropdown-menu">
             <li><a href="/account">My Account</a></li>
+            <li><a href="/request">New Request</a></li>
+            <li><a href="/loans">My Loans</a></li>
             <li class="divider"></li>
             <li><a href="#" ng-click="logout()"}>Logout</a></li>
           </ul>
