--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -29,7 +29,7 @@
               <div class="metadata-loan-value metadata-loan-value-red">{{(slider.value * 1.058) | number:2 }}€</div>
             </div>
           </div>
-          <a href="/request" role="button" class="btn btn-default">New Application</a>
+          <a href="/request" role="button" class="btn btn-default">Get Loan</a>
         </div>
       </div>
     </div>
