--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -1,3 +1,38 @@
 <div class="container">
-    About
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="panel">
+                <div class="panel-body">
+                    <h3>About us</h3>
+                   <p>
+                       iPuli is a new word for online credits in the financial market. We offer the lowest interest rate, comfortable service and borrower's terms.
+
+                       The loan-taking process is quick, comfortable and convenient for everybody, since the loan can be obtained from online, anywhere from anywhere, and with our representatives at the company's branch.
+
+                       In order to get a loan, only an active ID or passport is required. The company's services can be used by citizens of Georgia from 22 to 65 years. The customer must meet the credit requirements of the company to get a loan.
+
+                       iPuli allows you to use online loan from 100 to 700 GEL. The loan will be issued for 30 days.
+
+                       Loan Fee is 5,8%
+
+                       we offer:
+
+                       The lowest interest rate among Georgian online loans;
+                       Convenient, comfortable and convenient service for everyone;
+                       Transparent conditions;
+                       Qualified consultations;
+                       Simple form of application, without extra documents.
+                       The loan-taking process is very simple and consists of three stages:
+
+                       Register
+                       Confirmation of the application
+                       Identification
+                       iPuli professionals are always ready to provide you with qualified service.
+
+                       Our goal is to make iPuli be more affordable!
+                   </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
