--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -25,7 +25,8 @@
       <ul ng-if="isAuthenticated()" class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" data-toggle="dropdown" class="navbar-avatar dropdown-toggle">
-            <img ng-src="{{currentUser.picture || currentUser.gravatar}}"> {{currentUser.name || currentUser.email || currentUser.id}} <i class="caret"></i>
+            <!--<img ng-src="{{currentUser.picture || currentUser.gravatar}}"> {{currentUser.name || currentUser.email || currentUser.id}} <i class="caret"></i>-->
+            {{currentUser.name || currentUser.email || currentUser.id}} <i class="caret"></i>
           </a>
           <ul class="dropdown-menu">
             <li><a href="/account">My Account</a></li>
