--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -32,6 +32,7 @@ $panel-body-padding: 30px;
 @import url("//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800%7CRaleway:100,300,600,700,800");
 @import "vendor/bootstrap";
 @import "vendor/rzslider/rzslider";
+@import "vendor/material/angular-material";
 
 // Scaffolding
 // -------------------------
