Adding wizards to the loans

--- a/app/partials/request.html
+++ b/app/partials/request.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <md-content flex="nogrow" style="margin: 40px auto">
+    <md-content flex="nogrow">
         <div>
             <md-card>
                 <md-toolbar>
@@ -12,57 +12,57 @@
                 </md-toolbar>
                 <md-stepper-card-content class="md-no-padding">
                     <md-steppers md-dynamic-height md-disable-tabs-behavior="true" md-stretch-steppers="always" md-selected="vm.selectedStep" md-busy-text="'Processing...'" md-busy="vm.showBusyText">
-                        <md-step label="Login detail" md-complete="vm.stepData[0].data.completed" ng-disabled="vm.stepProgress < 1">
+                        <md-step label="Loan" md-complete="vm.stepData[0].data.completed" ng-disabled="vm.stepProgress < 1">
                             <md-step-body>
-                                <form name="step1" ng-submit="vm.submitCurrentStep(vm.stepData[0].data)">
+                                <form name="step1" ng-submit="vm.submitCurrentStep(vm.stepData[0])">
                                     <md-content class="md-padding">
-                                        <div layout="row" layout-align="center top">
-                                            <div flex="nogrow" style="width: 400px">
-                                                <h4>Please enter your user name and password</h4>
-                                                <md-input-container class="md-block">
-                                                    <label>Your user name here</label>
-                                                    <input ng-disabled="vm.stepData[0].data.completed" name="username" ng-model="vm.stepData[0].data.username" required />
-                                                    <div ng-messages="step1.username.$error">
-                                                        <div ng-message="required">
-                                                            User name is required to proceed on next step.
-                                                        </div>
-                                                    </div>
-                                                </md-input-container>
-                                                <md-input-container class="md-block">
-                                                    <label>Your password here</label>
-                                                    <input ng-disabled="vm.stepData[0].data.completed" type="password" name="username" ng-model="vm.stepData[0].data.password" required />
-                                                    <div ng-messages="step1.password.$error">
-                                                        <div ng-message="required">
-                                                            Password required to proceed on next step.
-                                                        </div>
-                                                    </div>
-                                                </md-input-container>
+                                        <div>
+                                            <rzslider rz-slider-model="slider.value"
+                                                      rz-slider-options="slider.options">
+
+                                            </rzslider>
+                                        </div>
+                                        <div class="metadata-container">
+                                            <div class="metadata-loan-pair">
+                                                <div class="metadata-loan-title">Loan amount of</div>
+                                                <div class="metadata-loan-value">{{slider.value}}€</div>
+                                            </div>
+
+                                            <div class="metadata-loan-pair">
+                                                <div class="metadata-loan-title">Deadline</div>
+                                                <div class="metadata-loan-value metadata-loan-value-red">30 days</div>
+                                            </div>
+
+                                            <div class="metadata-loan-pair">
+                                                <div class="metadata-loan-title">Commission</div>
+                                                <div class="metadata-loan-value metadata-loan-value-red">{{(slider.value * 0.058) | number:2}}€</div>
+                                            </div>
+
+                                            <div class="metadata-loan-pair">
+                                                <div class="metadata-loan-title">Cover amount</div>
+                                                <div class="metadata-loan-value metadata-loan-value-red">{{(slider.value * 1.058) | number:2 }}€</div>
                                             </div>
                                         </div>
                                     </md-content>
                                     <md-step-actions layout="row">
                                         <div flex layout="row" layout-align="end top">
                                             <md-button class="md-warn">CANCEL</md-button>
-                                            <md-button type="submit" ng-disabled="!vm.stepData[0].data.username || !vm.stepData[0].data.password || vm.showBusyText" class="md-primary md-raised">NEXT</md-button>
+                                            <md-button type="submit" ng-disabled="!vm.stepData[0].data.value || vm.showBusyText" class="md-primary md-raised">NEXT</md-button>
                                         </div>
                                     </md-step-actions>
                                 </form>
                             </md-step-body>
                         </md-step>
-                        <md-step label="Personal Info" md-complete="vm.stepData[1].data.completed" ng-disabled="vm.stepProgress < 2">
+                        <md-step label="Details" md-complete="vm.stepData[1].data.completed" ng-disabled="vm.stepProgress < 2">
                             <md-step-body>
                                 <form name="step2">
                                     <md-content class="md-padding">
                                         <div layout="row" layout-align="center top">
                                             <div flex="nogrow" style="width: 400px">
-                                                <h4>Please enter yout full name</h4>
+                                                <h4>Please enter the reason</h4>
                                                 <md-input-container class="md-block">
-                                                    <label>Your first name here</label>
-                                                    <input name="firsname" ng-model="vm.stepData[1].data.firsname"/>
-                                                </md-input-container>
-                                                <md-input-container class="md-block">
-                                                    <label>Your last name</label>
-                                                    <input name="lastname" ng-model="vm.stepData[1].data.lastname"/>
+                                                    <label>What are you going to do with the money</label>
+                                                    <input name="reason" ng-model="vm.stepData[1].data.reason"/>
                                                 </md-input-container>
                                             </div>
                                         </div>
@@ -73,8 +73,8 @@
                                         </div>
                                         <div flex layout="row" layout-align="end top">
                                             <md-button class="md-warn">CANCEL</md-button>
-                                            <md-button ng-disabled="vm.showBusyText" ng-click="vm.submitCurrentStep(vm.stepData[1].data, !(vm.stepData[1].data.firsname && vm.stepData[1].data.lastname))" class="md-primary md-raised">
-                                                {{ vm.stepData[1].data.firsname && vm.stepData[1].data.lastname ? 'NEXT' : 'SKIP' }}
+                                            <md-button ng-disabled="vm.showBusyText" ng-click="vm.submitCurrentStep(vm.stepData[1].data, !(vm.stepData[1].data.reason))" class="md-primary md-raised">
+                                                NEXT
                                             </md-button>
                                         </div>
                                     </md-step-actions>
@@ -86,8 +86,8 @@
                                 <form name="step2">
                                     <md-content class="md-padding">
                                         <div layout="column" layout-align="center center" style="min-height: 200px">
-                                            <h4>Account created!</h4>
-                                            <md-button class="md-primary md-raised">GO TO DASHBOARD</md-button>
+                                            <h4>We'll notify you soon once it will be created!</h4>
+                                            <md-button class="md-primary md-raised" href="/loans">GO TO YOUR LOANS</md-button>
                                         </div>
                                     </md-content>
                                 </form>
