--- a/public/css/main.css
+++ b/public/css/main.css
@@ -24170,3 +24170,6 @@ textarea {
 
 .metadata-loan-pair .metadata-loan-value-red {
   color: red; }
+
+.rzslider .rz-pointer:focus {
+  outline: 0px; }
