--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -287,3 +287,17 @@ textarea {
 .rzslider .rz-pointer:focus{
   outline: 0px;
 }
+
+@media screen and (max-width:992px) {
+  footer{
+    position:relative;
+  }
+}
+
+
+
+@media screen and (max-width: 600px) {
+  .metadata-container{
+    flex-direction: column;
+  }
+}
