--- a/public/css/main.css
+++ b/public/css/main.css
@@ -24173,3 +24173,14 @@ textarea {
 
 .rzslider .rz-pointer:focus {
   outline: 0px; }
+
+@media screen and (max-width: 992px) {
+  footer {
+    position: relative; } }
+
+@media screen and (max-width: 600px) {
+  .metadata-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; } }
