--- a/public/css/main.css
+++ b/public/css/main.css
@@ -23988,7 +23988,7 @@ body {
   margin-bottom: 44px; }
 
 footer {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 44px;
   padding: 10px 30px;
@@ -24173,10 +24173,6 @@ textarea {
 
 .rzslider .rz-pointer:focus {
   outline: 0px; }
-
-@media screen and (max-width: 992px) {
-  footer {
-    position: relative; } }
 
 @media screen and (max-width: 600px) {
   .metadata-container {
