--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -47,7 +47,7 @@ body {
 }
 
 footer {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 44px;
   padding: 10px 30px;
@@ -288,9 +288,13 @@ textarea {
   outline: 0px;
 }
 
+.container{
+  //margin-bottom: 40px;
+}
+
 @media screen and (max-width:992px) {
   footer{
-    position:relative;
+    //position:relative;
   }
 }
 
