--- a/app/partials/signup.html
+++ b/app/partials/signup.html
@@ -7,9 +7,14 @@
       <form ng-submit="signup()">
         <legend>Create an account</legend>
         <div class="form-group">
-          <label for="name">Name</label>
-          <input type="text" name="name" id="name" placeholder="Name" class="form-control" ng-model="user.name" autofocus>
+          <label for="first-name">First Name</label>
+          <input type="text" name="name" id="first-name" placeholder="Name" class="form-control" ng-model="user.firstName" autofocus>
         </div>
+        <div class="form-group">
+          <label for="last-name">Last Name</label>
+          <input type="text" name="name" id="last-name" placeholder="Name" class="form-control" ng-model="user.lastName" autofocus>
+        </div>
+
         <div class="form-group">
           <label for="email">Email</label>
           <input type="email" name="email" id="email" placeholder="Email" class="form-control" ng-model="user.email">
@@ -19,7 +24,7 @@
           <input type="password" name="password" id="password" placeholder="Password" class="form-control" ng-model="user.password">
         </div>
         <div class="form-group">
-          <small class="text-muted">By signing up, you agree to the <a href="/">Terms of Service</a>.</small>
+          <small class="text-muted">By signing up, you agree to the <a href="/terms">Terms of Service</a>.</small>
         </div>
         <button type="submit" class="btn btn-success">Create an account</button>
       </form>
