--- a/app/partials/request.html
+++ b/app/partials/request.html
@@ -17,7 +17,7 @@
                                 <form name="step1" ng-submit="vm.submitCurrentStep(vm.stepData[0])">
                                     <md-content class="md-padding">
                                         <div>
-                                            <rzslider rz-slider-model="slider.value"
+                                            <rzslider rz-slider-model="loan.value"
                                                       rz-slider-options="slider.options">
 
                                             </rzslider>
